[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/AdventuraTheme.tres" type="Theme" id=1]
[ext_resource path="res://scripts/screens/GameScreen.gd" type="Script" id=2]
[ext_resource path="res://scenes/GameWorld.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/ui/FpsMeter.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/textures/adventura_logo_small.png" type="Texture" id=5]
[ext_resource path="res://scenes/ui/MemoryUsage.tscn" type="PackedScene" id=6]

[node name="GameScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="ViewportContainer" type="ViewportContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 800, 600 )
mouse_filter = 2
stretch = true

[node name="Viewport" type="Viewport" parent="ViewportContainer"]
size = Vector2( 1024, 600 )
size_override_stretch = true
handle_input_locally = false
render_target_update_mode = 3
physics_object_picking = true

[node name="GameWorld" parent="ViewportContainer/Viewport" instance=ExtResource( 3 )]

[node name="GameWorldInfo" type="MarginContainer" parent="."]
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="GameWorldInfo"]
margin_left = 10.0
margin_top = 10.0
margin_right = 269.0
margin_bottom = 267.0
custom_constants/separation = 0

[node name="__LogoContainer" type="HBoxContainer" parent="GameWorldInfo/VBoxContainer"]
margin_right = 259.0
margin_bottom = 16.0

[node name="__AdventuraLogo" type="TextureRect" parent="GameWorldInfo/VBoxContainer/__LogoContainer"]
margin_right = 108.0
margin_bottom = 16.0
texture = ExtResource( 5 )

[node name="__AdventuraVersion" type="Label" parent="GameWorldInfo/VBoxContainer/__LogoContainer"]
margin_left = 112.0
margin_right = 196.0
margin_bottom = 15.0
text = "Version: 0.2"

[node name="FpsMeter" parent="GameWorldInfo/VBoxContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 16.0
margin_right = 259.0
margin_bottom = 32.0

[node name="MemoryUsage" parent="GameWorldInfo/VBoxContainer" instance=ExtResource( 6 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 32.0
margin_right = 259.0
margin_bottom = 46.0

[node name="HBoxContainer" type="HBoxContainer" parent="GameWorldInfo/VBoxContainer"]
margin_top = 46.0
margin_right = 259.0
margin_bottom = 61.0

[node name="__DepthLabelInfo" type="Label" parent="GameWorldInfo/VBoxContainer/HBoxContainer"]
margin_right = 49.0
margin_bottom = 15.0
theme = ExtResource( 1 )
text = "Depth: "

[node name="DepthLabel" type="Label" parent="GameWorldInfo/VBoxContainer/HBoxContainer"]
margin_left = 53.0
margin_right = 53.0
margin_bottom = 15.0
theme = ExtResource( 1 )

[node name="__GenerateInfo" type="Label" parent="GameWorldInfo/VBoxContainer"]
margin_top = 61.0
margin_right = 259.0
margin_bottom = 76.0
theme = ExtResource( 1 )
text = "Click \"g\" to generate level"

[node name="__FullscreenInfo" type="Label" parent="GameWorldInfo/VBoxContainer"]
margin_top = 76.0
margin_right = 259.0
margin_bottom = 91.0
theme = ExtResource( 1 )
text = "Click \"F11\" to toggle fullscreen mode"

[node name="LevelsInfo" type="VBoxContainer" parent="GameWorldInfo/VBoxContainer"]
margin_top = 91.0
margin_right = 259.0
margin_bottom = 257.0
rect_min_size = Vector2( 256, 128 )

[node name="__LevelsInfoLabel" type="Label" parent="GameWorldInfo/VBoxContainer/LevelsInfo"]
margin_right = 259.0
margin_bottom = 15.0
text = "Levels generated:"

[node name="LevelList" type="ItemList" parent="GameWorldInfo/VBoxContainer/LevelsInfo"]
margin_top = 19.0
margin_right = 259.0
margin_bottom = 147.0
rect_min_size = Vector2( 256, 128 )
theme = ExtResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="GameWorldInfo/VBoxContainer/LevelsInfo"]
margin_top = 151.0
margin_right = 259.0
margin_bottom = 166.0

[node name="Ascend" type="Button" parent="GameWorldInfo/VBoxContainer/LevelsInfo/HBoxContainer"]
margin_right = 127.0
margin_bottom = 15.0
size_flags_horizontal = 3
theme = ExtResource( 1 )
text = "Ascend"

[node name="Descend" type="Button" parent="GameWorldInfo/VBoxContainer/LevelsInfo/HBoxContainer"]
margin_left = 131.0
margin_right = 259.0
margin_bottom = 15.0
size_flags_horizontal = 3
theme = ExtResource( 1 )
text = "Descend"

[connection signal="depth_changed" from="ViewportContainer/Viewport/GameWorld" to="." method="__on_depth_changed"]
[connection signal="generation_ended" from="ViewportContainer/Viewport/GameWorld" to="." method="__on_generation_ended"]
[connection signal="generation_started" from="ViewportContainer/Viewport/GameWorld" to="." method="__on_generation_started"]
[connection signal="level_added" from="ViewportContainer/Viewport/GameWorld" to="." method="__on_level_added"]
[connection signal="level_changed" from="ViewportContainer/Viewport/GameWorld" to="." method="__on_level_changed"]
[connection signal="item_selected" from="GameWorldInfo/VBoxContainer/LevelsInfo/LevelList" to="." method="__on_item_selected"]
[connection signal="pressed" from="GameWorldInfo/VBoxContainer/LevelsInfo/HBoxContainer/Ascend" to="." method="__on_ascend_pressed"]
[connection signal="pressed" from="GameWorldInfo/VBoxContainer/LevelsInfo/HBoxContainer/Descend" to="." method="__on_descend_pressed"]
